Login ui setup v1.0.0

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">Chatroom</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="username">نام کاربری</string>
+    <string name="password">پسوورد</string>
+    <string name="login">ورود</string>
+    <string name="not_user">حساب کاربری ندارید؟</string>
+    <string name="welcome">خوش آمدید</string>
 </resources>
