--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="login">ورود</string>
     <string name="not_user">حساب کاربری ندارید؟</string>
     <string name="welcome">خوش آمدید</string>
+    <string name="sign_up">ثبت نام</string>
+    <string name="email">ایمیل</string>
 </resources>
