--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="email">ایمیل</string>
     <string name="enter_username">لطفا نام کاربری را وارد کتید</string>
     <string name="enter_password">لطفا پسوورد را وارد کتید</string>
+    <string name="rooms">Rooms :</string>
 </resources>
